public/styles/globals.scss
/* Imports */
@import './_variables.scss';
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

/* Common */

body{
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif;
  background-color: $black;
  overflow-x: hidden;
}

ul, h1, h2, h3, p{
  margin: 0;
  padding: 0;
}

a{
  text-decoration: none;
}

li{
  margin: 0;
  list-style: none;
  padding: 0;
}

input, select {
  font-family: "Montserrat", sans-serif;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}

::-webkit-scrollbar{
  width: .5em;
  display: fixed;
}

::-webkit-scrollbar-track{
  background-color: $primary-color;
  border-radius: 100vw;
  margin-block: 8em;
}

::-webkit-scrollbar-thumb{
  background-color: $black;
  border: .1em solid $primary-color;
  border-radius: 100vw;
  
}

::-webkit-scrollbar-thumb:hover{
  background-color: $black;
}

.app{
  margin-top: 59px;
  max-width: 1200px;
  margin: auto;
  overflow-x: hidden;
  @media (max-width: 1000px) {
    padding: 0 0px;
    margin-top: 50px;
  }
}

.cp-hs{
  cursor: pointer;
  transition: .3s ease-out;
  &:hover{
    transform: scale(1.04);
  }
}

.pr-gr{
  background: $primary-gradient;
}

.sbtn{
  padding: 10px 20px;
  border-radius: 20px;
  font-weight: 700;
  color: $white;
  font-size: $small;
}

/* Components */

.public-navbar{
  display: flex;
  flex-direction: row;
  width: calc(100% - 160px);
  padding: 10px 80px;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 10;
  animation: fadeIn 1s forwards;
  background: linear-gradient(180deg, rgba($black, 1) 20%, rgba($black, 0) 100%);
  .nav-logo{
    width: 20%;
  }
  @media (max-width: 1000px) {
    width: calc(100% - 80px);
    padding: 10px 40px;
  }
}

.public-navbar-mobile{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
  height: 30px;
  padding: 10px 0;
  background-color: rgba($black, 0);
  position: fixed;
  overflow: hidden;
  top: 0;
  left: 0;
  z-index: 10;
  transition: .3s ease-out;
  background: linear-gradient(180deg, rgba($black, 1) 20%, rgba($black, 0) 100%);
  animation: fadeIn 1s forwards;
  .abtn{
    position: absolute;
    top: 12px;
    left: 15px;
  }
  .nav-logo{
    margin-bottom: 15px;
  }
  .nav-links{
    margin: 15px 0;
    padding: 30px 0;
    flex-direction: column !important;
    align-items: center;
  }
  .nav-options{
    margin: 15px 0;
  }
  &.show{
    height: 330px;
    border-radius: 0 0 25px 25px;
    background-color: rgba($black, 1);
  }
}

#close-menu{
  animation: fadeIn .3s forwards;
}

.nav-links{
  color: $white;
  display: flex;
  flex-direction: row;
  gap: 2rem;
  span{
    font-size: $small;
    cursor: pointer;
    transition: .3s ease-out;
    position: relative;
    display: inline-block;
    &::after{
      position: absolute;
      left: 0;
      bottom: -10px;
      content: '';
      width: 0;
      height: 2px;
      background-color: $primary-color;
      transition: .3s ease-out;
    }
    &:hover{
      color: $primary-color;
      &::after{
        width: 100%;
      }
    }
    &.on{
      color: $primary-color;
      &::after{
        width: 100%;
      }
    }
  }
  @media (max-width: 900px) {
    span{
      font-size: $standar;
    }
  }
}

.nav-options{
  width: 20%;
  display: flex;
  flex-direction: row;
  gap: 1rem;
  align-items: center;
  justify-content: flex-end;
  span{
    font-size: $small;
    font-weight: 600;
    color: $primary-color;
    white-space: nowrap;
    cursor: pointer;
    transition: .3s ease-out;
    position: relative;
    display: inline-block;
    &::after{
      position: absolute;
      left: 0;
      bottom: -10px;
      content: '';
      width: 0;
      height: 2px;
      background-color: $primary-color;
      transition: .3s ease-out;
    }
    &:hover{
      color: $primary-color;
      &::after{
        width: 100%;
      }
    }
  }
  @media (max-width: 900px) {
    justify-content: center;
    span{
      font-size: $standar;
    }
    .sbtn{
      font-size: $standar;
    }
  }
}

.sep-line{
  height: .5px;
  width: 60%;
  background-color: rgba($white, 0.3);
}

.search-bar{
  margin-top: 100px;
  margin-bottom: 30px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  height: fit-content;
  opacity: .3;
  transition: .3s ease-out;
  .search-wrap{
    width: 60%;
    height: 40px;
    border-radius: 25px;
    border: solid 2px $white;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 10px;
    gap: 1rem;
    input{
      width: 100%;
      font-size: $standar;
      background-color: transparent;
      border: none;
      text-align: center;
      outline: none;
      color: $white;
    }
  }
  &.focus{
    opacity: 1;
  }
}
/* ... */

